--- a/src/nejdb2.csproj
+++ b/src/nejdb2.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <RootNamespace>Ejdb2</RootNamespace>
+	<LangVersion>preview</LangVersion>
   </PropertyGroup>
 
 </Project>
