--- a/examples/nejdb2.examples.csproj
+++ b/examples/nejdb2.examples.csproj
@@ -2,9 +2,8 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>Ejdb2.Examples</RootNamespace>
-    <LangVersion>preview</LangVersion>
     <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
